# wechat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
apps/wechat-api/: Cargo.toml  config.yaml
apps/wechat-api/src/: main.rs
crates/roze-wechat/: Cargo.toml
crates/roze-wechat/src/: client.rs  config.rs  crypto.rs  error.rs  lib.rs  modules.rs  token.rs  types.rs
crates/roze-wechat/src/modules_impl/: basic_service.rs  channels.rs  mini_program.rs  official_account.rs  open_platform.rs  open_work.rs  payment.rs  platform_client.rs  work.rs
deploy/kubernetes/: wechat-api.yaml
docs/: coverage-matrix.md  powerwechat-gap-analysis.md  powerwechat-method-depth-audit.md  production-checklist.md  requirements.md
