[workspace]
members = [
    "crates/roze-wechat",
    "apps/wechat-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/roze-team/wechat"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aes = "0.8"
aes-gcm = "0.10"
axum = { version = "0.8.9", default-features = false, features = ["http1", "http2", "json", "query", "tokio", "tracing"] }
base64 = "0.22"
bytes = "1"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cipher = "0.4"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "query", "rustls", "stream"] }
roze-config = { git = "https://github.com/roze-team/roze.git", package = "roze-config" }
roze-error = { git = "https://github.com/roze-team/roze.git", package = "roze-error" }
roze-health = { git = "https://github.com/roze-team/roze.git", package = "roze-health" }
roze-http = { git = "https://github.com/roze-team/roze.git", package = "roze-http" }
roze-metrics = { git = "https://github.com/roze-team/roze.git", package = "roze-metrics" }
roze-result = { git = "https://github.com/roze-team/roze.git", package = "roze-result" }
roze-singleflight = { git = "https://github.com/roze-team/roze.git", package = "roze-singleflight" }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v7"] }
