[package]
name = "wechat-api"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
roze-wechat = { path = "../../crates/roze-wechat" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
