[package]
name = "roze-wechat"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
base64.workspace = true
bytes.workspace = true
cbc.workspace = true
chrono.workspace = true
cipher.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
roze-singleflight.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
